@@ -1,5 +1,5 @@
 
-[*] Wed Jun  5 2002 - netcat (cvs)
+[*] Thu Jun  6 2002 - netcat (cvs)
 
   o Completely rewritten the function core_readwrite() in order to allow more
     possibilities of featuring adding.
@@ -8,6 +8,8 @@
     bogus information in certain circumstances.
   o Changed the prototype of the telnet codes parsing function to match the new
     objects-based design.
+  o With udp listening mode the first 1024 bytes of the first incoming packet
+    are no longer lost.
 
 
 [*] Fri May 31 2002 - netcat v0.5.0
